# rizma-heygen

./: .gitignore  CLAUDE.md  LICENSE  README.md
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/agents/: __init__.py  interview_agent.py
backend/app/api/: __init__.py  liveavatar_proxy.py  personalities.py  router.py  sessions.py  websocket.py
backend/app/mcp/: __init__.py  tool_registry.py
backend/app/models/: __init__.py  interview.py  personality.py
backend/app/services/: __init__.py  evaluator.py  guardrails.py  heygen.py  llm.py  memory.py  orchestrator.py  personality.py
backend/tests/: __init__.py  test_evaluator.py
frontend/: .env.example  .gitignore  next.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: index.ts
frontend/src/components/Avatar/: AvatarView.tsx
frontend/src/components/Chat/: MessageBubble.tsx  MessageInput.tsx  index.ts
frontend/src/components/Controls/: PushToTalkButton.tsx  index.ts
frontend/src/components/Interview/: ChatPanel.tsx  ControlBar.tsx  InterviewLayout.tsx  Timer.tsx  VideoArea.tsx  index.ts
frontend/src/components/Transcript/: TranscriptPane.tsx  index.ts
frontend/src/hooks/: index.ts  useInterview.ts  useWebSocket.ts
frontend/src/types/: interview.ts
